// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`batches (sub-events) > club cannot write batches 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;

exports[`batches (sub-events) > creates a batch 1`] = `
{
  "body": {
    "data": {
      "batch_number": "string",
      "created_at": "datetime(.000000Z)",
      "created_by": {
        "club_id": "null",
        "created_at": "datetime(.000000Z)",
        "email": "string",
        "full_name": "string",
        "id": "uuid",
        "last_login": "datetime(sql)",
        "role": "string",
        "status": "string",
        "updated_at": "datetime(.000000Z)",
        "username": "string",
      },
      "creator_name": "string",
      "date": "datetime(.000000Z)",
      "event": {
        "broadcast_station_id": "null",
        "created_at": "datetime(.000000Z)",
        "date": "datetime(.000000Z)",
        "description": "null",
        "end_date": "null",
        "event_type": "string",
        "expected_participants": "number",
        "id": "uuid",
        "image": "null",
        "is_tournament": "boolean",
        "kkf_approval_date": "null",
        "kkf_approved_by": "null",
        "kkf_comment": "null",
        "location": "string",
        "main_sponsor_id": "null",
        "name": "string",
        "organizer_id": "uuid",
        "status": "string",
        "tournament_format": "null",
        "tournament_weight_class": "null",
        "updated_at": "datetime(.000000Z)",
      },
      "event_id": "uuid",
      "event_name": "string",
      "id": "uuid",
      "location": "string",
      "name": "string",
      "phase": "string",
      "status": "string",
      "updated_at": "datetime(.000000Z)",
      "week_number": "number",
    },
    "success": "boolean",
  },
  "status": 201,
}
`;

exports[`batches (sub-events) > deletes a batch (Super Admin only) 1`] = `
{
  "body": {
    "data": {
      "batch_number": "string",
      "created_at": "datetime(.000000Z)",
      "created_by": "uuid",
      "date": "datetime(.000000Z)",
      "event_id": "uuid",
      "id": "uuid",
      "location": "string",
      "name": "string",
      "phase": "string",
      "status": "string",
      "updated_at": "datetime(.000000Z)",
      "week_number": "number",
    },
    "message": "string",
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`batches (sub-events) > lists and shows batches publicly > list item 1`] = `
{
  "batch_number": "string",
  "created_at": "datetime(.000000Z)",
  "created_by": {
    "club_id": "null",
    "created_at": "datetime(.000000Z)",
    "email": "string",
    "full_name": "string",
    "id": "uuid",
    "last_login": "datetime(sql)",
    "role": "string",
    "status": "string",
    "updated_at": "datetime(.000000Z)",
    "username": "string",
  },
  "creator_name": "string",
  "date": "datetime(.000000Z)",
  "event": {
    "broadcast_station_id": "null",
    "created_at": "datetime(.000000Z)",
    "date": "datetime(.000000Z)",
    "description": "null",
    "end_date": "null",
    "event_type": "string",
    "expected_participants": "number",
    "id": "uuid",
    "image": "null",
    "is_tournament": "boolean",
    "kkf_approval_date": "null",
    "kkf_approved_by": "null",
    "kkf_comment": "null",
    "location": "string",
    "main_sponsor_id": "null",
    "name": "string",
    "organizer_id": "uuid",
    "status": "string",
    "tournament_format": "null",
    "tournament_weight_class": "null",
    "updated_at": "datetime(.000000Z)",
  },
  "event_id": "uuid",
  "event_name": "string",
  "id": "uuid",
  "location": "string",
  "name": "string",
  "phase": "string",
  "status": "string",
  "updated_at": "datetime(.000000Z)",
  "week_number": "number",
}
`;

exports[`batches (sub-events) > referee cannot write batches 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;

exports[`batches (sub-events) > returns 404 for unknown batches 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 404,
}
`;

exports[`batches (sub-events) > updates a batch 1`] = `
{
  "body": {
    "data": {
      "batch_number": "string",
      "created_at": "datetime(.000000Z)",
      "created_by": {
        "club_id": "null",
        "created_at": "datetime(.000000Z)",
        "email": "string",
        "full_name": "string",
        "id": "uuid",
        "last_login": "datetime(sql)",
        "role": "string",
        "status": "string",
        "updated_at": "datetime(.000000Z)",
        "username": "string",
      },
      "creator_name": "string",
      "date": "datetime(.000000Z)",
      "event": {
        "broadcast_station_id": "null",
        "created_at": "datetime(.000000Z)",
        "date": "datetime(.000000Z)",
        "description": "null",
        "end_date": "null",
        "event_type": "string",
        "expected_participants": "number",
        "id": "uuid",
        "image": "null",
        "is_tournament": "boolean",
        "kkf_approval_date": "null",
        "kkf_approved_by": "null",
        "kkf_comment": "null",
        "location": "string",
        "main_sponsor_id": "null",
        "name": "string",
        "organizer_id": "uuid",
        "status": "string",
        "tournament_format": "null",
        "tournament_weight_class": "null",
        "updated_at": "datetime(.000000Z)",
      },
      "event_id": "uuid",
      "event_name": "string",
      "id": "uuid",
      "location": "string",
      "name": "string",
      "phase": "string",
      "status": "string",
      "updated_at": "datetime(.000000Z)",
      "week_number": "number",
    },
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`match results > club cannot record results 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;

exports[`match results > organizer cannot record results 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;

exports[`match results > records a win and recalculates both fighters' records 1`] = `
{
  "body": {
    "data": {
      "agreed_weight": "number",
      "championship": "null",
      "championshipId": "null",
      "championshipTitleName": "null",
      "championship_id": "null",
      "club_a_name": "string",
      "club_a_response": "string",
      "club_b_name": "string",
      "club_b_response": "string",
      "created_at": "datetime(.000000Z)",
      "date": "date",
      "event_id": "uuid",
      "fighter_a": {
        "alias": "null",
        "club": {
          "created_at": "datetime(.000000Z)",
          "description": "null",
          "email": "null",
          "established": "null",
          "head_coach": "null",
          "id": "uuid",
          "image": "null",
          "location": "null",
          "name": "string",
          "name_khmer": "null",
          "phone": "null",
          "rating": "number",
          "status": "string",
          "updated_at": "datetime(.000000Z)",
        },
        "club_id": "uuid",
        "created_at": "datetime(.000000Z)",
        "current_weight": "number",
        "date_of_birth": "date",
        "deleted_at": "null",
        "gender": "string",
        "grade": "string",
        "height": "number",
        "id": "uuid",
        "image": "string",
        "medical_status": "string",
        "name": "string",
        "name_khmer": "string",
        "nationality": "string",
        "professional_status": "string",
        "province": "null",
        "record": "string",
        "status": "string",
        "style": "null",
        "suspension_end_date": "null",
        "updated_at": "datetime(.000000Z)",
        "verified_by": "null",
        "verified_date": "null",
      },
      "fighter_a_confirmed": "boolean",
      "fighter_a_grade": "string",
      "fighter_a_id": "uuid",
      "fighter_a_image": "string",
      "fighter_a_name": "string",
      "fighter_a_record": "string",
      "fighter_b": {
        "alias": "null",
        "club": {
          "created_at": "datetime(.000000Z)",
          "description": "null",
          "email": "null",
          "established": "null",
          "head_coach": "null",
          "id": "uuid",
          "image": "null",
          "location": "null",
          "name": "string",
          "name_khmer": "null",
          "phone": "null",
          "rating": "number",
          "status": "string",
          "updated_at": "datetime(.000000Z)",
        },
        "club_id": "uuid",
        "created_at": "datetime(.000000Z)",
        "current_weight": "number",
        "date_of_birth": "date",
        "deleted_at": "null",
        "gender": "string",
        "grade": "string",
        "height": "number",
        "id": "uuid",
        "image": "string",
        "medical_status": "string",
        "name": "string",
        "name_khmer": "string",
        "nationality": "string",
        "professional_status": "string",
        "province": "null",
        "record": "string",
        "status": "string",
        "style": "null",
        "suspension_end_date": "null",
        "updated_at": "datetime(.000000Z)",
        "verified_by": "null",
        "verified_date": "null",
      },
      "fighter_b_confirmed": "boolean",
      "fighter_b_grade": "string",
      "fighter_b_id": "uuid",
      "fighter_b_image": "string",
      "fighter_b_name": "string",
      "fighter_b_record": "string",
      "glove_brand": "string",
      "glove_confirmed_date": "null",
      "glove_size": "string",
      "id": "uuid",
      "isTitleMatch": "boolean",
      "is_title_match": "boolean",
      "judge_ids": [],
      "knockdown_limit": "number",
      "proposal_status": "string",
      "referee": "null",
      "referee_confirmed": "boolean",
      "referee_id": "null",
      "referee_name": "null",
      "result": {
        "duration": "string",
        "match_id": "uuid",
        "method": "string",
        "recorded_at": "datetime(.000000Z)",
        "round": "number",
        "winner_id": "uuid",
      },
      "round_time": "number",
      "rounds": "number",
      "sortOrder": "number",
      "sort_order": "number",
      "status": "string",
      "sub_event": {
        "batch_number": "string",
        "created_at": "datetime(.000000Z)",
        "created_by": "uuid",
        "date": "datetime(.000000Z)",
        "event_id": "uuid",
        "id": "uuid",
        "location": "string",
        "name": "string",
        "phase": "string",
        "status": "string",
        "updated_at": "datetime(.000000Z)",
        "week_number": "number",
      },
      "sub_event_id": "uuid",
      "sub_event_name": "string",
      "updated_at": "datetime(.000000Z)",
      "winner_duration": "string",
      "winner_id": "uuid",
      "winner_method": "string",
      "winner_round": "number",
    },
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`match results > referee cannot record results 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;

exports[`matches > creates a match, deriving the event from the batch 1`] = `
{
  "agreed_weight": "number",
  "championship": "null",
  "championshipId": "null",
  "championshipTitleName": "null",
  "championship_id": "null",
  "club_a_name": "string",
  "club_a_response": "string",
  "club_b_name": "string",
  "club_b_response": "string",
  "created_at": "datetime(.000000Z)",
  "date": "date",
  "event_id": "uuid",
  "fighter_a": {
    "alias": "null",
    "club": {
      "created_at": "datetime(.000000Z)",
      "description": "null",
      "email": "null",
      "established": "null",
      "head_coach": "null",
      "id": "uuid",
      "image": "null",
      "location": "null",
      "name": "string",
      "name_khmer": "null",
      "phone": "null",
      "rating": "number",
      "status": "string",
      "updated_at": "datetime(.000000Z)",
    },
    "club_id": "uuid",
    "created_at": "datetime(.000000Z)",
    "current_weight": "number",
    "date_of_birth": "date",
    "deleted_at": "null",
    "gender": "string",
    "grade": "string",
    "height": "number",
    "id": "uuid",
    "image": "string",
    "medical_status": "string",
    "name": "string",
    "name_khmer": "string",
    "nationality": "string",
    "professional_status": "string",
    "province": "null",
    "record": "null",
    "status": "string",
    "style": "null",
    "suspension_end_date": "null",
    "updated_at": "datetime(.000000Z)",
    "verified_by": "null",
    "verified_date": "null",
  },
  "fighter_a_confirmed": "boolean",
  "fighter_a_grade": "string",
  "fighter_a_id": "uuid",
  "fighter_a_image": "string",
  "fighter_a_name": "string",
  "fighter_a_record": "null",
  "fighter_b": {
    "alias": "null",
    "club": {
      "created_at": "datetime(.000000Z)",
      "description": "null",
      "email": "null",
      "established": "null",
      "head_coach": "null",
      "id": "uuid",
      "image": "null",
      "location": "null",
      "name": "string",
      "name_khmer": "null",
      "phone": "null",
      "rating": "number",
      "status": "string",
      "updated_at": "datetime(.000000Z)",
    },
    "club_id": "uuid",
    "created_at": "datetime(.000000Z)",
    "current_weight": "number",
    "date_of_birth": "date",
    "deleted_at": "null",
    "gender": "string",
    "grade": "string",
    "height": "number",
    "id": "uuid",
    "image": "string",
    "medical_status": "string",
    "name": "string",
    "name_khmer": "string",
    "nationality": "string",
    "professional_status": "string",
    "province": "null",
    "record": "null",
    "status": "string",
    "style": "null",
    "suspension_end_date": "null",
    "updated_at": "datetime(.000000Z)",
    "verified_by": "null",
    "verified_date": "null",
  },
  "fighter_b_confirmed": "boolean",
  "fighter_b_grade": "string",
  "fighter_b_id": "uuid",
  "fighter_b_image": "string",
  "fighter_b_name": "string",
  "fighter_b_record": "null",
  "glove_brand": "string",
  "glove_confirmed_date": "null",
  "glove_size": "string",
  "id": "uuid",
  "isTitleMatch": "boolean",
  "is_title_match": "boolean",
  "judge_ids": [
    "string",
  ],
  "knockdown_limit": "number",
  "proposal_status": "string",
  "referee": {
    "club_id": "null",
    "created_at": "datetime(.000000Z)",
    "email": "string",
    "full_name": "string",
    "id": "uuid",
    "last_login": "datetime(sql)",
    "role": "string",
    "status": "string",
    "updated_at": "datetime(.000000Z)",
    "username": "string",
  },
  "referee_confirmed": "boolean",
  "referee_id": "uuid",
  "referee_name": "string",
  "result": "null",
  "round_time": "number",
  "rounds": "number",
  "sortOrder": "number",
  "sort_order": "number",
  "status": "string",
  "sub_event": {
    "batch_number": "string",
    "created_at": "datetime(.000000Z)",
    "created_by": "uuid",
    "date": "datetime(.000000Z)",
    "event_id": "uuid",
    "id": "uuid",
    "location": "string",
    "name": "string",
    "phase": "string",
    "status": "string",
    "updated_at": "datetime(.000000Z)",
    "week_number": "number",
  },
  "sub_event_id": "uuid",
  "sub_event_name": "string",
  "updated_at": "datetime(.000000Z)",
  "winner_duration": "null",
  "winner_id": "null",
  "winner_method": "null",
  "winner_round": "null",
}
`;

exports[`matches > deletes a match (Super Admin only) 1`] = `
{
  "body": {
    "data": {
      "agreed_weight": "number",
      "championship_id": "null",
      "club_a_response": "string",
      "club_b_response": "string",
      "created_at": "datetime(.000000Z)",
      "event_id": "uuid",
      "fighter_a_confirmed": "boolean",
      "fighter_a_id": "uuid",
      "fighter_b_confirmed": "boolean",
      "fighter_b_id": "uuid",
      "glove_brand": "string",
      "glove_confirmed_date": "null",
      "glove_size": "string",
      "id": "uuid",
      "is_title_match": "boolean",
      "judge_ids": [],
      "knockdown_limit": "number",
      "proposal_status": "string",
      "referee_confirmed": "boolean",
      "referee_id": "null",
      "round_time": "number",
      "rounds": "number",
      "sort_order": "number",
      "status": "string",
      "sub_event_id": "uuid",
      "updated_at": "datetime(.000000Z)",
      "winner_id": "null",
    },
    "message": "string",
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`matches > lets a Club/Gym user update only matches involving their club 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;

exports[`matches > returns 404 for unknown matches 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 404,
}
`;

exports[`matches > shows a match 1`] = `
{
  "body": {
    "data": {
      "agreed_weight": "number",
      "championship": "null",
      "championshipId": "null",
      "championshipTitleName": "null",
      "championship_id": "null",
      "club_a_name": "string",
      "club_a_response": "string",
      "club_b_name": "string",
      "club_b_response": "string",
      "created_at": "datetime(.000000Z)",
      "date": "date",
      "event_id": "uuid",
      "fighter_a": {
        "alias": "null",
        "club": {
          "created_at": "datetime(.000000Z)",
          "description": "null",
          "email": "null",
          "established": "null",
          "head_coach": "null",
          "id": "uuid",
          "image": "null",
          "location": "null",
          "name": "string",
          "name_khmer": "null",
          "phone": "null",
          "rating": "number",
          "status": "string",
          "updated_at": "datetime(.000000Z)",
        },
        "club_id": "uuid",
        "created_at": "datetime(.000000Z)",
        "current_weight": "number",
        "date_of_birth": "date",
        "deleted_at": "null",
        "gender": "string",
        "grade": "string",
        "height": "number",
        "id": "uuid",
        "image": "string",
        "medical_status": "string",
        "name": "string",
        "name_khmer": "string",
        "nationality": "string",
        "professional_status": "string",
        "province": "null",
        "record": "null",
        "status": "string",
        "style": "null",
        "suspension_end_date": "null",
        "updated_at": "datetime(.000000Z)",
        "verified_by": "null",
        "verified_date": "null",
      },
      "fighter_a_confirmed": "boolean",
      "fighter_a_grade": "string",
      "fighter_a_id": "uuid",
      "fighter_a_image": "string",
      "fighter_a_name": "string",
      "fighter_a_record": "null",
      "fighter_b": {
        "alias": "null",
        "club": {
          "created_at": "datetime(.000000Z)",
          "description": "null",
          "email": "null",
          "established": "null",
          "head_coach": "null",
          "id": "uuid",
          "image": "null",
          "location": "null",
          "name": "string",
          "name_khmer": "null",
          "phone": "null",
          "rating": "number",
          "status": "string",
          "updated_at": "datetime(.000000Z)",
        },
        "club_id": "uuid",
        "created_at": "datetime(.000000Z)",
        "current_weight": "number",
        "date_of_birth": "date",
        "deleted_at": "null",
        "gender": "string",
        "grade": "string",
        "height": "number",
        "id": "uuid",
        "image": "string",
        "medical_status": "string",
        "name": "string",
        "name_khmer": "string",
        "nationality": "string",
        "professional_status": "string",
        "province": "null",
        "record": "null",
        "status": "string",
        "style": "null",
        "suspension_end_date": "null",
        "updated_at": "datetime(.000000Z)",
        "verified_by": "null",
        "verified_date": "null",
      },
      "fighter_b_confirmed": "boolean",
      "fighter_b_grade": "string",
      "fighter_b_id": "uuid",
      "fighter_b_image": "string",
      "fighter_b_name": "string",
      "fighter_b_record": "null",
      "glove_brand": "string",
      "glove_confirmed_date": "null",
      "glove_size": "string",
      "id": "uuid",
      "isTitleMatch": "boolean",
      "is_title_match": "boolean",
      "judge_ids": [],
      "knockdown_limit": "number",
      "proposal_status": "string",
      "referee": "null",
      "referee_confirmed": "boolean",
      "referee_id": "null",
      "referee_name": "null",
      "result": "null",
      "round_time": "number",
      "rounds": "number",
      "sortOrder": "number",
      "sort_order": "number",
      "status": "string",
      "sub_event": {
        "batch_number": "string",
        "created_at": "datetime(.000000Z)",
        "created_by": "uuid",
        "date": "datetime(.000000Z)",
        "event_id": "uuid",
        "id": "uuid",
        "location": "string",
        "name": "string",
        "phase": "string",
        "status": "string",
        "updated_at": "datetime(.000000Z)",
        "week_number": "number",
      },
      "sub_event_id": "uuid",
      "sub_event_name": "string",
      "updated_at": "datetime(.000000Z)",
      "winner_duration": "null",
      "winner_id": "null",
      "winner_method": "null",
      "winner_round": "null",
    },
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`matches > updates a match, accepting sortOrder or sort_order 1`] = `
{
  "body": {
    "data": {
      "agreed_weight": "number",
      "championship": "null",
      "championshipId": "null",
      "championshipTitleName": "null",
      "championship_id": "null",
      "club_a_name": "string",
      "club_a_response": "string",
      "club_b_name": "string",
      "club_b_response": "string",
      "created_at": "datetime(.000000Z)",
      "date": "date",
      "event_id": "uuid",
      "fighter_a": {
        "alias": "null",
        "club": {
          "created_at": "datetime(.000000Z)",
          "description": "null",
          "email": "null",
          "established": "null",
          "head_coach": "null",
          "id": "uuid",
          "image": "null",
          "location": "null",
          "name": "string",
          "name_khmer": "null",
          "phone": "null",
          "rating": "number",
          "status": "string",
          "updated_at": "datetime(.000000Z)",
        },
        "club_id": "uuid",
        "created_at": "datetime(.000000Z)",
        "current_weight": "number",
        "date_of_birth": "date",
        "deleted_at": "null",
        "gender": "string",
        "grade": "string",
        "height": "number",
        "id": "uuid",
        "image": "string",
        "medical_status": "string",
        "name": "string",
        "name_khmer": "string",
        "nationality": "string",
        "professional_status": "string",
        "province": "null",
        "record": "null",
        "status": "string",
        "style": "null",
        "suspension_end_date": "null",
        "updated_at": "datetime(.000000Z)",
        "verified_by": "null",
        "verified_date": "null",
      },
      "fighter_a_confirmed": "boolean",
      "fighter_a_grade": "string",
      "fighter_a_id": "uuid",
      "fighter_a_image": "string",
      "fighter_a_name": "string",
      "fighter_a_record": "null",
      "fighter_b": {
        "alias": "null",
        "club": {
          "created_at": "datetime(.000000Z)",
          "description": "null",
          "email": "null",
          "established": "null",
          "head_coach": "null",
          "id": "uuid",
          "image": "null",
          "location": "null",
          "name": "string",
          "name_khmer": "null",
          "phone": "null",
          "rating": "number",
          "status": "string",
          "updated_at": "datetime(.000000Z)",
        },
        "club_id": "uuid",
        "created_at": "datetime(.000000Z)",
        "current_weight": "number",
        "date_of_birth": "date",
        "deleted_at": "null",
        "gender": "string",
        "grade": "string",
        "height": "number",
        "id": "uuid",
        "image": "string",
        "medical_status": "string",
        "name": "string",
        "name_khmer": "string",
        "nationality": "string",
        "professional_status": "string",
        "province": "null",
        "record": "null",
        "status": "string",
        "style": "null",
        "suspension_end_date": "null",
        "updated_at": "datetime(.000000Z)",
        "verified_by": "null",
        "verified_date": "null",
      },
      "fighter_b_confirmed": "boolean",
      "fighter_b_grade": "string",
      "fighter_b_id": "uuid",
      "fighter_b_image": "string",
      "fighter_b_name": "string",
      "fighter_b_record": "null",
      "glove_brand": "string",
      "glove_confirmed_date": "null",
      "glove_size": "string",
      "id": "uuid",
      "isTitleMatch": "boolean",
      "is_title_match": "boolean",
      "judge_ids": [],
      "knockdown_limit": "number",
      "proposal_status": "string",
      "referee": "null",
      "referee_confirmed": "boolean",
      "referee_id": "null",
      "referee_name": "null",
      "result": "null",
      "round_time": "number",
      "rounds": "number",
      "sortOrder": "number",
      "sort_order": "number",
      "status": "string",
      "sub_event": {
        "batch_number": "string",
        "created_at": "datetime(.000000Z)",
        "created_by": "uuid",
        "date": "datetime(.000000Z)",
        "event_id": "uuid",
        "id": "uuid",
        "location": "string",
        "name": "string",
        "phase": "string",
        "status": "string",
        "updated_at": "datetime(.000000Z)",
        "week_number": "number",
      },
      "sub_event_id": "uuid",
      "sub_event_name": "string",
      "updated_at": "datetime(.000000Z)",
      "winner_duration": "null",
      "winner_id": "null",
      "winner_method": "null",
      "winner_round": "null",
    },
    "success": "boolean",
  },
  "status": 200,
}
`;
